--- a/index.html
+++ b/index.html
@@ -21,28 +21,26 @@
 		<link href="css/style.css" rel="stylesheet" />
 		<!-- jQuery 3.3.1 -->
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	</head> 
+	</head>
 	<body>
+
+
 <!-- Navigation Mobile type 2 -->
 
 <a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 <div class="navigation_mobile bg-light type2">
 	<a class="close_menu color-main"><i class="fas fa-times"></i></a>
-	<div class="px-40 pt-60 pb-60 text-center inner">		
-		<div><a href="#" class="f-heading f-22 link color-main mb-20">Home</a></div>		
-		<div><a href="#" class="f-heading f-22 link color-main mb-20">Popular</a></div>		
-		<div><a href="#" class="f-heading f-22 link color-main mb-20">Recent</a></div>		
-		<div><a href="#" class="f-heading f-22 link color-main mb-20">Featured</a></div>		
-		<div><a href="#" class="f-heading f-22 link color-main mb-20">Designers</a></div>		
-		<div><a href="#" class="f-heading f-22 link color-main mb-20">Team</a></div>
-		
-		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Help</a></div>
+	<div class="px-40 pt-60 pb-60 text-center inner">
+		<div><a href="#" class="f-heading f-22 link color-main mb-20">Home</a></div>
+		<div><a href="#" class="f-heading f-22 link color-main mb-20">Mission</a></div>
+		<div><a href="#" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
+		<div><a href="#" class="f-heading f-22 link color-main mb-20">KEEP?</a></div>
+
+
+
+		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Contact Us</a></div>
 		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">F.A.Q.</a></div>
-		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Support</a></div>
-		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">About Us</a></div>
-		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Blog</a></div>
-		<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Careers</a></div>
-						
+
 		<div class="socials mt-60">
 			<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-twitter"></i></a>
 			<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-facebook"></i></a>
@@ -93,8 +91,8 @@
 								<h1 class="mt-40 big">Let&apos;s secure!</h1>
 								<div class="row">
 									<div class="col-lg-10 mt-30 mb-35 f-22 op-7 text-adaptive">
-										<div>The most important part of internet security is consistency.   
-											Logistics require accuracy and precious -- something totally missed in the current environment. 
+										<div>The most important part of internet security is consistency.
+											Logistics require accuracy and precious -- something totally missed in the current environment.
 										</div>
 									</div>
 								</div>
