--- a/index.html
+++ b/index.html
@@ -3,31 +3,23 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Startup 4.0 - DS 1</title>
+	<title>Digital Snow -- A California Startup</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="i/favicon.png" type="image/x-icon">
-	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Tomorrow:100,200,300,400,600,500,700,800,900|Blinker:100,200,300,400,500,600,700,800,900&amp;subset=latin" rel="stylesheet">
-	<!-- Bootstrap 4.3.1 CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<!-- Slick 1.8.1 jQuery plugin CSS (Sliders) -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-	<!-- Fancybox 3 jQuery plugin CSS (Open images and video in popup) -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-	<!-- AOS 2.3.4 jQuery plugin CSS (Animations) -->
 	<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-	<!-- FontAwesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<!-- Startup 3 CSS (Styles for all blocks) -->
 	<link href="css/style.css" rel="stylesheet" />
-	<!-- jQuery 3.3.1 -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
 
 
-	<!-- Navigation Mobile type 2 -->
+	<!-- Navigation Mobile -->
 
 	<a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 	<div class="navigation_mobile bg-light type2">
@@ -36,18 +28,16 @@
 			<div><a href="#" class="f-heading f-22 link color-main mb-20">Home</a></div>
 			<div><a href="#" class="f-heading f-22 link color-main mb-20">Mission</a></div>
 			<div><a href="#" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
-			<div><a href="#" class="f-heading f-22 link color-main mb-20">KEEP?</a></div>
-
-
 
 			<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Contact Us</a></div>
 			<div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">F.A.Q.</a></div>
 
 			<div class="socials mt-60">
-				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-instagram"></i></a>
-				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-behance"></i></a>
+				<a href="https://www.instagram.com/digital.snow/" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-instagram"></i></a>
+				<a href="https://github.com/digitalsnowcorp" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-git"></i></a>
+				<a href="digitalsnow.atlassian.net" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-jira"></i>
 				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-twitter"></i></a>
-				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-dribbble"></i></a>
+
 			</div>
 		</div>
 	</div> <!-- Header 20 -->
@@ -215,16 +205,7 @@
 				class="link color-transparent-white">here</a>.</div>
 	</div>
 
-	<!-- gReCaptcha popup (uncomment if you need a recaptcha integration) -->
-	<!--
-		<div class="bg-dark op-8 grecaptcha-overlay"></div>
-		<div class="bg-light radius10 w-350 h-120 px-20 pt-20 pb-20 grecaptcha-popup">
-			<div class="w-full h-full d-flex justify-content-center align-items-center">
-				<div id="g-recaptcha" data-sitekey="PUT_YOUR_SITE_KEY_HERE"></div>
-			</div>
-		</div>
-		<script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-		-->
+
 	<!-- Bootstrap 4.3.1 JS -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 	<!-- Fancybox 3 jQuery plugin JS (Open images and video in popup) -->
