delete form handler

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="navigation_mobile bg-light type2">
 		<a class="close_menu color-main"><i class="fas fa-times"></i></a>
 		<div class="px-40 pt-60 pb-60 text-center inner">
-			<div><a href="#" class="f-heading f-22 link color-main mb-20">Home</a></div>
+			<div><a href="https://digitalsnow.app" class="f-heading f-22 link color-main mb-20">Home</a></div>
 			<div><a href="#" class="f-heading f-22 link color-main mb-20">Mission</a></div>
 			<div><a href="#" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
 
