--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-	<!-- Navigation Mobile -->
+	<!-- Mobile Nav -->
 
 	<a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 	<div class="navigation_mobile bg-light type2">
@@ -40,7 +40,7 @@
 
 			</div>
 		</div>
-	</div> <!-- Header 20 -->
+	</div> <!-- Nav / Header -->
 	<header class="pt-155 pb-170 bg-dark header_20">
 		<nav class="header_menu_20 pt-60">
 			<div class="container px-xl-0">
@@ -53,13 +53,13 @@
 								</a>
 								<div class="bg-dark dropdown-menu dropdown-menu-right text-right lh-40" aria-labelledby="header_menu_20_dropdown">
 									<div>
-										<a href="#" class="link color-white">Home</a>
+										<a href="https://digitalsnow.app" class="link color-white">Home</a>
 									</div>
 									<div>
-										<a href="#" class="link color-white">Mission</a>
+										<a href="mission.html" class="link color-white">Mission</a>
 									</div>
 									<div>
-										<a href="#" class="link color-white">Ventures</a>
+										<a href="ventures.html" class="link color-white">Ventures</a>
 									</div>
 								</div>
 							</div>
@@ -97,7 +97,7 @@
 		</div>
 	</header>
 
-	<!-- Content 7 -->
+	<!-- Updates -->
 	<section class="pt-90 pb-85 bg-dark content_7">
 		<div class="container px-xl-0">
 			<div class="row justify-content-center text-center color-white">
@@ -110,7 +110,7 @@
 		</div>
 	</section>
 
-	<!-- Feature 17 -->
+	<!-- Facts -->
 	<section class="pt-100 pb-90 bg-dark color-white feature_17">
 		<div class="container px-xl-0">
 			<div class="row">
@@ -146,7 +146,7 @@
 		</div>
 	</section>
 
-	<!-- Footer 11 -->
+	<!-- Footer -->
 	<footer class="pt-45 pb-45 bg-dark color-white text-center footer_11">
 		<div class="container px-xl-0">
 			<div class="row align-items-center">
@@ -175,9 +175,9 @@
 			</div>
 			<div class="row">
 				<div class="mb-20 mb-lg-0 col-lg-7">
-					<a href="#" class="link color-white mr-10">Home</a>
-					<a href="#" class="link color-white mx-10">Mission</a>
-					<a href="#" class="link color-white mx-10">Ventures</a>
+					<a href="https://digitalsnow.app" class="link color-white mr-10">Home</a>
+					<a href="mission.html" class="link color-white mx-10">Mission</a>
+					<a href="ventures.html" class="link color-white mx-10">Ventures</a>
 					<a href="#" class="link color-white mx-10">Contact Us</a>
 					<a href="#" class="link color-white mx-10">NONE</a>
 					<a href="#" class="link color-white ml-10">NONE</a>
@@ -189,22 +189,6 @@
 			</div>
 		</div>
 	</footer>
-
-	<!-- forms alerts -->
-	<div class="alert alert-success alert-dismissible fixed-top alert-form-success" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		Thanks for your message!
-	</div>
-	<div class="alert alert-warning alert-dismissible fixed-top alert-form-check-fields" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		Please, fill in required fields.
-	</div>
-	<div class="alert alert-danger alert-dismissible fixed-top alert-form-error" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<div class="message">An error occurred while sending data :( Please, check if your hosting supports PHP and check how to set form data sending <a href="https://designmodo.com/startup/documentation/#form-handler" target="_blank"
-				class="link color-transparent-white">here</a>.</div>
-	</div>
-
 
 	<!-- Bootstrap 4.3.1 JS -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
