major content fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Digital Snow -- A California Startup</title>
+	<title>Digital Snow</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="i/favicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Tomorrow:100,200,300,400,600,500,700,800,900|Blinker:100,200,300,400,500,600,700,800,900&amp;subset=latin" rel="stylesheet">
