--- a/mission.html
+++ b/mission.html
@@ -3,29 +3,22 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Digital Snow -- A California Startup</title>
+	<title>Digital Snow</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="i/favicon.png" type="image/x-icon">
-	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Tomorrow:100,200,300,400,600,500,700,800,900|Blinker:100,200,300,400,500,600,700,800,900&amp;subset=latin" rel="stylesheet">
-	<!-- Bootstrap 4.3.1 CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<!-- Slick 1.8.1 jQuery plugin CSS (Sliders) -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-	<!-- Fancybox 3 jQuery plugin CSS (Open images and video in popup) -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-	<!-- AOS 2.3.4 jQuery plugin CSS (Animations) -->
 	<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-	<!-- FontAwesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<!-- Startup 3 CSS (Styles for all blocks) -->
 	<link href="css/style.css" rel="stylesheet" />
-	<!-- jQuery 3.3.1 -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
-	<!-- Navigation 15 -->
+
+	<!-- Nav -->
 	<nav class="pt-30 pb-30 bg-dark lh-40 navigation_15">
 		<div class="container px-xl-0">
 			<div class="row justify-content-between align-items-center">
@@ -36,28 +29,26 @@
 						</a>
 						<div class="bg-dark dropdown-menu" aria-labelledby="navigation_15_dropdown">
 							<div>
-								<a href="#" class="link color-white">Home</a>
+								<a href="https://digitalsnow.app" class="link color-white">Home</a>
 							</div>
 							<div>
 								<a href="#" class="link color-white">Mission</a>
 							</div>
 							<div>
-								<a href="#" class="link color-white">Ventures</a>
+								<a href="ventures.html" class="link color-white">Ventures</a>
 							</div>
 						</div>
 					</div>
-					<a href="#" class="link logo color-white">Digital Snow</a>
+					<a href="https://digitalsnow.app" class="link logo color-white">Digital Snow</a>
 				</div>
 				<div class="col-sm-1 col-2 text-right">
-					<a href="#" class="link color-white">
-						<i class="fas fa-search"></i>
 					</a>
 				</div>
 			</div>
 		</div>
 	</nav>
 
-	<!-- Content 12 -->
+	<!-- Mission Statement -->
 	<section class="pt-100 pb-100 bg-dark content_12">
 		<div class="container px-xl-0 color-white">
 			<div class="row">
@@ -69,10 +60,14 @@
 					<div class="op-7 text-adaptive">
 						<div>
 							Startup Framework contains components and complex blocks which can easily be integrated
-							into almost any design. All of these components are made in the same style, and can easily be
+							into almost any design.
+							<br><br>
+							All of these components are made in the same style, and can easily be
 							integrated into projects, allowing you to create hundreds of solutions for your future projects.Startup Framework contains components and complex blocks which can easily be integrated
 							into almost any design. All of these components are made in the same style, and can easily be
-							integrated into projects, allowing you to create hundreds of solutions for your future projects.Startup Framework contains components and complex blocks which can easily be integrated
+							integrated into projects, allowing you to create hundreds of solutions for your future projects.
+							<br><br><br>
+							Startup Framework contains components and complex blocks which can easily be integrated
 							into almost any design. All of these components are made in the same style, and can easily be
 							integrated into projects, allowing you to create hundreds of solutions for your future projects.
 						</div>
@@ -82,7 +77,7 @@
 		</div>
 	</section>
 
-	<!-- Team 5 -->
+	<!-- Our Team -->
 	<section class="pt-105 pb-120 bg-dark color-white text-center text-sm-left team_5">
 		<div class="container px-xl-0">
 			<div class="row">
@@ -180,25 +175,29 @@
 		</div>
 	</section>
 
-	<!-- Footer 11 -->
+	<!-- Footer -->
 	<footer class="pt-45 pb-45 bg-dark color-white text-center footer_11">
 		<div class="container px-xl-0">
 			<div class="row align-items-center">
 				<div class="mb-20 mb-lg-0 col-lg-3">
-					<a href="#" class="link logo color-white">Digital Snow</a>
+					<a href="https://digitalsnow.app" class="link logo color-white">Digital Snow</a>
 				</div>
 				<div class="col-lg-9 text-lg-right">
 					<a href="#" class="link color-white mr-10">Privacy Policy</a>
 					<a href="#" class="link color-white mx-10">Terms</a>
 					<div class="d-inline-block socials">
-						<a href="#" class="link color-white mx-10">
-							<i class="fab fa-twitter"></i>
+						<a href="https://www.instagram.com/digital.snow/" class="link color-white mx-10">
+							<i class="fab fa-instagram"></i>
 						</a>
-						<a href="#" class="link color-white mx-10">
-							<i class="fab fa-facebook-f"></i>
+						<a href="https://github.com/digitalsnowcorp" class="link color-white mx-10">
+							<i class="fab fa-git"></i>
+						</a>
+						<a href="digitalsnow.atlassian.net" class="link color-white ml-10">
+							<i class="fab fa-jira"></i>
 						</a>
 						<a href="#" class="link color-white ml-10">
-							<i class="fab fa-google-plus-g"></i>
+							<i class="fab fa-twitter"></i>
+						</a>
 						</a>
 					</div>
 				</div>
@@ -224,31 +223,7 @@
 		</div>
 	</footer>
 
-	<!-- forms alerts -->
-	<div class="alert alert-success alert-dismissible fixed-top alert-form-success" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		Thanks for your message!
-	</div>
-	<div class="alert alert-warning alert-dismissible fixed-top alert-form-check-fields" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		Please, fill in required fields.
-	</div>
-	<div class="alert alert-danger alert-dismissible fixed-top alert-form-error" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<div class="message">An error occurred while sending data :( Please, check if your hosting supports PHP and check how to set form data sending <a href="https://designmodo.com/startup/documentation/#form-handler" target="_blank"
-				class="link color-transparent-white">here</a>.</div>
-	</div>
 
-	<!-- gReCaptcha popup (uncomment if you need a recaptcha integration) -->
-	<!--
-		<div class="bg-dark op-8 grecaptcha-overlay"></div>
-		<div class="bg-light radius10 w-350 h-120 px-20 pt-20 pb-20 grecaptcha-popup">
-			<div class="w-full h-full d-flex justify-content-center align-items-center">
-				<div id="g-recaptcha" data-sitekey="PUT_YOUR_SITE_KEY_HERE"></div>
-			</div>
-		</div>
-		<script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-		-->
 	<!-- Bootstrap 4.3.1 JS -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 	<!-- Fancybox 3 jQuery plugin JS (Open images and video in popup) -->
@@ -261,7 +236,7 @@
 	<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 	<!-- Maskedinput jQuery plugin JS (Masks for input fields) -->
 	<script src="js/jquery.maskedinput.min.js"></script>
-	<!-- Startup 3 JS (Custom js for all blocks) -->
+	<!-- JS (Custom js for all blocks) -->
 	<script src="js/script.js"></script>
 </body>
 
