added pics for crew

--- a/mission.html
+++ b/mission.html
@@ -192,7 +192,7 @@
 						<a href="https://github.com/digitalsnowcorp" class="link color-white mx-10">
 							<i class="fab fa-git"></i>
 						</a>
-						<a href="digitalsnow.atlassian.net" class="link color-white ml-10">
+						<a href="https://digitalsnow.atlassian.net" class="link color-white ml-10">
 							<i class="fab fa-jira"></i>
 						</a>
 						<a href="#" class="link color-white ml-10">
@@ -212,8 +212,6 @@
 					<a href="#" class="link color-white mx-10">Mission</a>
 					<a href="#" class="link color-white mx-10">Ventures</a>
 					<a href="#" class="link color-white mx-10">Contact Us</a>
-					<a href="#" class="link color-white mx-10">NONE</a>
-					<a href="#" class="link color-white ml-10">NONE</a>
 				</div>
 				<div class="col-lg-5 text-lg-right">
 					<div class="text-adaptive">© 2020 Digital Snow Corp. All rights reserved.
