--- a/mission.html
+++ b/mission.html
@@ -59,12 +59,9 @@
 					</div>
 					<div class="op-7 text-adaptive">
 						<div>
-							Startup Framework contains components and complex blocks which can easily be integrated
-							into almost any design.
+							We're on a mission to design products that will help security researchers, software developers and companies to create resilient solutions that thwart forward-thinking security threats.
 							<br><br>
-							All of these components are made in the same style, and can easily be
-							integrated into projects, allowing you to create hundreds of solutions for your future projects.Startup Framework contains components and complex blocks which can easily be integrated
-							into almost any design. All of these components are made in the same style, and can easily be
+							Our company was born in San Mateo, CA; we serve local and international clients with services that cater to their individualized needs. We focus on getting everyday users and busy corporate managers to be compliant, secure, up to date, and worry free. All of these components are made in the same style, and can easily be
 							integrated into projects, allowing you to create hundreds of solutions for your future projects.
 							<br><br><br>
 							Startup Framework contains components and complex blocks which can easily be integrated
@@ -83,7 +80,7 @@
 			<div class="row">
 				<div class="col-xl-8 col-lg-10">
 					<h2 class="small">Startup Crew</h2>
-					<div class="mt-25 mb-70 f-22 text-adaptive">Our most valuable asset - our people - are what matter rthe most and bring our greatest values to light.
+					<div class="mt-25 mb-70 f-22 text-adaptive">Our most valuable asset - our people - are what matter the most and bring our greatest aspirations to light. Right now, we are looking for marketing gurus, hero without the cape programmers, and business development powerhouses.
 					</div>
 				</div>
 			</div>
