fixed footer socials

--- a/index.html
+++ b/index.html
@@ -157,14 +157,18 @@
 					<a href="#" class="link color-white mr-10">Privacy Policy</a>
 					<a href="#" class="link color-white mx-10">Terms</a>
 					<div class="d-inline-block socials">
-						<a href="#" class="link color-white mx-10">
-							<i class="fab fa-twitter"></i>
+						<a href="https://www.instagram.com/digital.snow/" class="link color-white mx-10">
+							<i class="fab fa-instagram"></i>
 						</a>
-						<a href="#" class="link color-white mx-10">
-							<i class="fab fa-facebook-f"></i>
+						<a href="https://github.com/digitalsnowcorp" class="link color-white mx-10">
+							<i class="fab fa-git"></i>
+						</a>
+						<a href="https://digitalsnow.atlassian.net" class="link color-white ml-10">
+							<i class="fab fa-jira"></i>
 						</a>
 						<a href="#" class="link color-white ml-10">
-							<i class="fab fa-google-plus-g"></i>
+							<i class="fab fa-twitter"></i>
+						</a>
 						</a>
 					</div>
 				</div>
@@ -179,8 +183,6 @@
 					<a href="mission.html" class="link color-white mx-10">Mission</a>
 					<a href="ventures.html" class="link color-white mx-10">Ventures</a>
 					<a href="#" class="link color-white mx-10">Contact Us</a>
-					<a href="#" class="link color-white mx-10">NONE</a>
-					<a href="#" class="link color-white ml-10">NONE</a>
 				</div>
 				<div class="col-lg-5 text-lg-right">
 					<div class="text-adaptive">© 2020 Digital Snow Corp. All rights reserved.
