fixed socials on ventures

--- a/ventures.html
+++ b/ventures.html
@@ -134,17 +134,21 @@
         <div class="col-lg-9 text-lg-right">
           <a href="#" class="link color-white mr-10">Privacy Policy</a>
           <a href="#" class="link color-white mx-10">Terms</a>
-          <div class="d-inline-block socials">
-            <a href="#" class="link color-white mx-10">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="link color-white mx-10">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#" class="link color-white ml-10">
-              <i class="fab fa-google-plus-g"></i>
-            </a>
-          </div>
+					<div class="d-inline-block socials">
+						<a href="https://www.instagram.com/digital.snow/" class="link color-white mx-10">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="https://github.com/digitalsnowcorp" class="link color-white mx-10">
+							<i class="fab fa-git"></i>
+						</a>
+						<a href="https://digitalsnow.atlassian.net" class="link color-white ml-10">
+							<i class="fab fa-jira"></i>
+						</a>
+						<a href="#" class="link color-white ml-10">
+							<i class="fab fa-twitter"></i>
+						</a>
+						</a>
+					</div>
         </div>
       </div>
       <div>
@@ -157,8 +161,6 @@
           <a class="link color-white mx-10">Mission</a>
           <a href="#" class="link color-white mx-10">Ventures</a>
           <a href="#" class="link color-white mx-10">Contact Us</a>
-          <a href="#" class="link color-white mx-10">NONE</a>
-          <a href="#" class="link color-white ml-10">NONE</a>
         </div>
         <div class="col-lg-5 text-lg-right">
           <div class="text-adaptive">© 2020 Digital Snow Corp. All rights reserved.
@@ -168,31 +170,6 @@
     </div>
   </footer>
 
-  <!-- forms alerts -->
-  <div class="alert alert-success alert-dismissible fixed-top alert-form-success" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    Thanks for your message!
-  </div>
-  <div class="alert alert-warning alert-dismissible fixed-top alert-form-check-fields" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    Please, fill in required fields.
-  </div>
-  <div class="alert alert-danger alert-dismissible fixed-top alert-form-error" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <div class="message">An error occurred while sending data :( Please, check if your hosting supports PHP and check how to set form data sending <a href="https://designmodo.com/startup/documentation/#form-handler" target="_blank"
-        class="link color-transparent-white">here</a>.</div>
-  </div>
-
-  <!-- gReCaptcha popup (uncomment if you need a recaptcha integration) -->
-  <!--
-		<div class="bg-dark op-8 grecaptcha-overlay"></div>
-		<div class="bg-light radius10 w-350 h-120 px-20 pt-20 pb-20 grecaptcha-popup">
-			<div class="w-full h-full d-flex justify-content-center align-items-center">
-				<div id="g-recaptcha" data-sitekey="PUT_YOUR_SITE_KEY_HERE"></div>
-			</div>
-		</div>
-		<script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-		-->
   <!-- Bootstrap 4.3.1 JS -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
   <!-- Fancybox 3 jQuery plugin JS (Open images and video in popup) -->
