more link fixes in global navs

--- a/mission.html
+++ b/mission.html
@@ -205,9 +205,9 @@
 			</div>
 			<div class="row">
 				<div class="mb-20 mb-lg-0 col-lg-7">
-					<a href="#" class="link color-white mr-10">Home</a>
+					<a href="https://digitalsnow.app" class="link color-white mr-10">Home</a>
 					<a href="#" class="link color-white mx-10">Mission</a>
-					<a href="#" class="link color-white mx-10">Ventures</a>
+					<a href="ventures.html" class="link color-white mx-10">Ventures</a>
 					<a href="#" class="link color-white mx-10">Contact Us</a>
 				</div>
 				<div class="col-lg-5 text-lg-right">
