--- a/ventures.html
+++ b/ventures.html
@@ -157,8 +157,8 @@
       </div>
       <div class="row">
         <div class="mb-20 mb-lg-0 col-lg-7">
-          <a href="#" class="link color-white mr-10">Home</a>
-          <a class="link color-white mx-10">Mission</a>
+          <a href="https://digitalsnow.app" class="link color-white mr-10">Home</a>
+          <a href="mission.html" class="link color-white mx-10">Mission</a>
           <a href="#" class="link color-white mx-10">Ventures</a>
           <a href="#" class="link color-white mx-10">Contact Us</a>
         </div>
