--- a/mission.html
+++ b/mission.html
@@ -42,8 +42,10 @@
 					<a href="https://digitalsnow.app" class="link logo color-white">Digital Snow</a>
 				</div>
 				<div class="col-sm-1 col-2 text-right">
-					</a>
-				</div>
+          <a href="#" class="link color-white">
+            <i class="fas fa-search"></i>
+          </a>
+        </div>
 			</div>
 		</div>
 	</nav>
