--- a/ventures.html
+++ b/ventures.html
@@ -3,29 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Startup 4.0 - DS 2</title>
+  <title>Digital Snow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="i/favicon.png" type="image/x-icon">
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Tomorrow:100,200,300,400,600,500,700,800,900|Blinker:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <!-- Bootstrap 4.3.1 CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Slick 1.8.1 jQuery plugin CSS (Sliders) -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <!-- Fancybox 3 jQuery plugin CSS (Open images and video in popup) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-  <!-- AOS 2.3.4 jQuery plugin CSS (Animations) -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <!-- Startup 3 CSS (Styles for all blocks) -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- jQuery 3.3.1 -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
-  <!-- Navigation 15 -->
+
+  <!-- Nav -->
   <nav class="pt-30 pb-30 bg-dark lh-40 navigation_15">
     <div class="container px-xl-0">
       <div class="row justify-content-between align-items-center">
@@ -36,17 +29,17 @@
             </a>
             <div class="bg-dark dropdown-menu" aria-labelledby="navigation_15_dropdown">
               <div>
-                <a href="#" class="link color-white">Home</a>
+                <a href="https://digitalsnow.app" class="link color-white">Home</a>
               </div>
               <div>
-                <a href="#" class="link color-white">Mission</a>
+                <a href="mission.html" class="link color-white">Mission</a>
               </div>
               <div>
                 <a href="#" class="link color-white">Ventures</a>
               </div>
             </div>
           </div>
-          <a href="#" class="link logo color-white">Digital Snow</a>
+          <a href="https://digitalsnow.app" class="link logo color-white">Digital Snow</a>
         </div>
         <div class="col-sm-1 col-2 text-right">
           <a href="#" class="link color-white">
@@ -100,7 +93,7 @@
       <div class="row justify-content-between">
         <div class="col-xl-8 col-lg-9 col-md-10 pt-105 pb-70 left_side">
           <h2 class="small">We&apos;re always on the hunt for more</h2>
-          <div class="mt-25 mb-95 f-22 text-adaptive description">Our brains and brawn are derived from a unique and diverse skillset that we constantly celebrate. We want to help advance technology in ways humans have never thought before
+          <div class="mt-25 mb-95 f-22 text-adaptive description">Our brains and brawn are derived from a unique and diverse skillset that we constantly celebrate. We want to help advance technology in ways humans have never of thought before
           </div>
           <div class="row">
             <div class="col-sm-6 mb-40 block">
@@ -129,7 +122,7 @@
     <div class="container px-xl-0">
       <div class="row align-items-center">
         <div class="mb-20 mb-lg-0 col-lg-3">
-          <a href="#" class="link logo color-white">Digital Snow</a>
+          <a href="https://digitalsnow.app" class="link logo color-white">Digital Snow</a>
         </div>
         <div class="col-lg-9 text-lg-right">
           <a href="#" class="link color-white mr-10">Privacy Policy</a>
