button href on index

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
               </div>
               <span>
-                <a href="#" class="btn lg action-1">See our ventures</a>
+                <a href="ventures.html" class="btn lg action-1">See our ventures</a>
               </span>
             </div>
           </div>
