--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
               <div class="row">
                 <div class="col-lg-10 mt-30 mb-35 f-22 op-7 text-adaptive">
                   <div>The most important part of internet security is consistency.
-                    Logistics require accuracy and precious -- something totally missed in the current environment.
+										<br><br>
+                    Logistics require accuracy and precision -- something totally missed in our current environment.
                   </div>
                 </div>
               </div>
               <span>
-                <a href="ventures.html" class="btn lg action-1">See our ventures</a>
+                <a href="ventures.html" class="btn lg action-1">See Our Ventures</a>
               </span>
             </div>
           </div>
