--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center text-center color-white">
         <div class="col-lg-8 col-md-10">
           <div class="f-14 semibold text-uppercase sp-20">Updates</div>
-          <div class="mt-15 f-22 text-adaptive">Due to the evolving situation with COVID-19, we are responding to all inquiries as soon as possible. Stay tuned for more info.
+          <div class="mt-15 f-22 text-adaptive">Due to the evolving situation with 🦠 COVID-19, we are responding to all inquiries as soon as possible. Stay tuned for more info.
           </div>
         </div>
       </div>
