change mobile nav icon and fixed more links

--- a/index.html
+++ b/index.html
@@ -21,26 +21,27 @@
 
   <!-- Mobile Nav -->
 
-  <a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
+  <a class="open_menu color-main bg-light radius_full"><i class="fas fa-snowflake"></i></a>
   <div class="navigation_mobile bg-light type2">
     <a class="close_menu color-main"><i class="fas fa-times"></i></a>
     <div class="px-40 pt-60 pb-60 text-center inner">
       <div><a href="https://digitalsnow.app" class="f-heading f-22 link color-main mb-20">Home</a></div>
-      <div><a href="#" class="f-heading f-22 link color-main mb-20">Mission</a></div>
-      <div><a href="#" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
+      <div><a href="mission.html" class="f-heading f-22 link color-main mb-20">Mission</a></div>
+      <div><a href="ventures.html" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
 
       <div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Contact Us</a></div>
-      <div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">F.A.Q.</a></div>
 
       <div class="socials mt-60">
         <a href="https://www.instagram.com/digital.snow/" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-instagram"></i></a>
         <a href="https://github.com/digitalsnowcorp" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-git"></i></a>
-        <a href="digitalsnow.atlassian.net" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-jira"></i>
+        <a href="https://digitalsnow.atlassian.net" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-jira"></i>
           <a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-twitter"></i></a>
-
       </div>
-    </div>
-  </div> <!-- Nav / Header -->
+      </div>
+      </div>
+
+
+  <!-- Nav / Header -->
   <header class="pt-155 pb-170 bg-dark header_20">
     <nav class="header_menu_20 pt-60">
       <div class="container px-xl-0">
