--- a/ventures.html
+++ b/ventures.html
@@ -25,7 +25,7 @@
         <div class="col-sm-11 col-10 d-flex flex-wrap align-items-center">
           <div class="mr-35 d-inline-block dropdown">
             <a href="#" class="link color-white" id="navigation_15_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-bars white"></i>
+              <i class="fas fa-snowflake"></i>
             </a>
             <div class="bg-dark dropdown-menu" aria-labelledby="navigation_15_dropdown">
               <div>
