--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="d-flex justify-content-end">
               <div class="dropdown">
                 <a href="#" class="link color-white lh-40" id="header_menu_20_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="fas fa-bars"></i>
+                  <i class="fas fa-snowflake"></i>
                 </a>
                 <div class="bg-dark dropdown-menu dropdown-menu-right text-right lh-40" aria-labelledby="header_menu_20_dropdown">
                   <div>
