--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,7 @@
 				<div class="col-lg-1">
 				</div>
 				<div class="col-xl-2 col-md-3">
-					<img src="i/content_16_logo.png" srcset="i/content_16_logo@2x.png 2x" alt="" class="img-fluid" />
+					<img src="i/image-55.jpeg" srcset="i/image-55.jpeg" alt="" class="img-fluid" />
 				</div>
 				<div class="col-xl-7 col-lg-8 col-md-9 mt-4 mt-md-0">
 					<h2 class="pl-15 small">with great privilege, comes great power</h2>
