--- a/menu.html
+++ b/menu.html
@@ -59,10 +59,10 @@
 					</div>
 				</div>
 				<div class="col-md-12 col-10">
-					<a href="#" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">Slack</a>
-					<a href="#" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">Jira</a>
-					<a href="#" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">Box</a>
-					<a href="#" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">WA Dev</a>
+					<a href="https://digitalsnow.slack.com" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">Slack</a>
+					<a href="https://digitalsnow.atlassian.com" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">Jira</a>
+					<a href="https://digitalsnow.box.com" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">Box</a>
+					<a href="https://wineabout.dev" class="btn border-transparent-white mx-15 mb-20 d-block d-sm-inline-block" target="_blank">WA Dev</a>
 				</div>
 			</div>
 		</div>
