--- a/mission.html
+++ b/mission.html
@@ -63,12 +63,7 @@
 						<div>
 							We're on a mission to design products that will help security researchers, software developers and companies to create resilient solutions that thwart forward-thinking security threats.
 							<br><br>
-							Our company was born in San Mateo, CA; we serve local and international clients with services that cater to their individualized needs. We focus on getting everyday users and busy corporate managers to be compliant, secure, up to date, and worry free. All of these components are made in the same style, and can easily be
-							integrated into projects, allowing you to create hundreds of solutions for your future projects.
-							<br><br><br>
-							Startup Framework contains components and complex blocks which can easily be integrated
-							into almost any design. All of these components are made in the same style, and can easily be
-							integrated into projects, allowing you to create hundreds of solutions for your future projects.
+							Our company was born in San Mateo, CA; we serve local and international clients with services that cater to their individualized needs. We focus on getting everyday users and busy corporate managers to be compliant, secure, up to date, and worry free.
 						</div>
 					</div>
 				</div>
