--- a/mission.html
+++ b/mission.html
@@ -77,7 +77,7 @@
 			<div class="row">
 				<div class="col-xl-8 col-lg-10">
 					<h2 class="small">Startup Crew</h2>
-					<div class="mt-25 mb-70 f-22 text-adaptive">Our most valuable asset - our people - are what matter the most and bring our greatest aspirations to light. Right now, we are looking for marketing gurus, hero without the cape programmers, and business development powerhouses.
+					<div class="mt-25 mb-70 f-22 text-adaptive">Our most valuable asset - our people - is what matters the most and brings our greatest aspirations to light. Right now, we are looking for marketing gurus, hero without the cape programmers, and business development powerhouses.
 					</div>
 				</div>
 			</div>
