--- a/mission.html
+++ b/mission.html
@@ -103,9 +103,6 @@
 					</a>
 					<div class="mt-15 block_socials">
 						<a href="#" class="link color-white mr-25" target="_blank">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="#" class="link color-white mr-25" target="_blank">
 							<i class="fab fa-dribbble"></i>
 						</a>
 					</div>
@@ -138,9 +135,6 @@
 					</a>
 					<div class="mt-15 block_socials">
 						<a href="#" class="link color-white mr-25" target="_blank">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="#" class="link color-white mr-25" target="_blank">
 							<i class="fab fa-instagram"></i>
 						</a>
 					</div>
@@ -153,7 +147,7 @@
 					</a>
 					<div class="mt-15 block_socials">
 						<a href="#" class="link color-white mr-25" target="_blank">
-							<i class="fab fa-twitter"></i>
+							<i class="fab fa-instagram"></i>
 						</a>
 					</div>
 				</div>
