--- a/ventures.html
+++ b/ventures.html
@@ -68,7 +68,7 @@
         </div>
         <div class="col-xl-3 col-md-4 col-sm-8 mb-50 block">
           <div class="mb-20 f-14 text-uppercase semibold sp-20 title">cryptoviews</div>
-          <div class="text-adaptive">AR and VR are no longer just an idea, they are reality
+          <div class="text-adaptive">get a quick insight on the state of your systems
           </div>
         </div>
         <div class="col-xl-4 col-md-4 col-sm-8 mb-50 block">
