--- a/ventures.html
+++ b/ventures.html
@@ -73,12 +73,12 @@
         </div>
         <div class="col-xl-4 col-md-4 col-sm-8 mb-50 block">
           <div class="mb-20 f-14 text-uppercase semibold sp-20 title">wine about</div>
-          <div class="text-adaptive">Premium Napa Valley experience defined by luxury and convenience
+          <div class="text-adaptive">Premium Napa Valley experience defined by luxury
           </div>
         </div>
         <div class="col-xl-3 col-md-4 col-sm-8 mb-50 block">
           <div class="mb-20 f-14 text-uppercase semibold sp-20 title">horizons</div>
-          <div class="text-adaptive">You&apos;re early to the party... it&apos;s too soon to say any more 🤞🏼
+          <div class="text-adaptive">You&apos;re early to the party...
           </div>
         </div>
         <div class="col-xl-1">
