--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="col-md-1 d-none d-md-block">
         </div>
         <div class="col-lg-5 col-md-6">
-          <h6 class="mt-55 mb-80 f-22 regular">Ever-changing environment we live in
+          <h6 class="mt-55 mb-80 f-22 regular">Ever-changing environment
           </h6>
           <div class="row">
             <div class="mb-55 col-md-10 col-sm-8 block">
