--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center text-center color-white">
         <div class="col-lg-8 col-md-10">
           <div class="f-14 semibold text-uppercase sp-20">Updates</div>
-          <div class="mt-15 f-22 text-adaptive">Due to the evolving situation with 🦠 COVID-19, we are responding to all inquiries as soon as possible. Stay tuned for more info.
+          <div class="mt-15 f-22 text-adaptive">Due to the evolving situation with 🦠 COVID-19, we know times are uncertain but we are commited to responding to every inquiry as soon as possible.
           </div>
         </div>
       </div>
@@ -123,8 +123,6 @@
         <div class="col-md-1 d-none d-md-block">
         </div>
         <div class="col-lg-5 col-md-6">
-          <h6 class="mt-55 mb-80 f-22 regular">Ever-changing environment
-          </h6>
           <div class="row">
             <div class="mb-55 col-md-10 col-sm-8 block">
               <div class="mb-10 f-18 medium title">Accelerated growth in the Information Age</div>
