--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center text-center color-white">
         <div class="col-lg-8 col-md-10">
           <div class="f-14 semibold text-uppercase sp-20">Updates</div>
-          <div class="mt-15 f-22 text-adaptive">Due to the evolving situation with 🦠 COVID-19, we know times are uncertain but we are commited to responding to every inquiry as soon as possible.
+          <div class="mt-15 f-22 text-adaptive">Due to the evolving situation with 🦠 COVID-19, we know times are uncertain. We are commited to responding to every inquiry as soon as possible.
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
             </div>
             <div class="mb-55 col-md-10 col-sm-8 block">
               <div class="mb-10 f-18 medium title">Prevent instead of react</div>
-              <div class="op-7 text-adaptive">Stop known malware in it&apos;s tracks but prevent future malicious software before it can get started
+              <div class="op-7 text-adaptive">Stop known attacks instantly. Thwart future incidents before they start.
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
         <div class="mb-20 mb-lg-0 col-lg-7">
           <a href="https://digitalsnow.app" class="link color-white mr-10">Home</a>
           <a href="mission.html" class="link color-white mx-10">Mission</a>
-          <a href="ventures.html" class="link color-white mx-10">Ventures</a>
+          <a href="#" class="link color-white mx-10">Ventures</a>
           <a href="#" class="link color-white mx-10">Contact Us</a>
         </div>
         <div class="col-lg-5 text-lg-right">
