--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="px-40 pt-60 pb-60 text-center inner">
       <div><a href="https://digitalsnow.app" class="f-heading f-22 link color-main mb-20">Home</a></div>
       <div><a href="mission.html" class="f-heading f-22 link color-main mb-20">Mission</a></div>
-      <div><a href="ventures.html" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
+      <div><a href="#" class="f-heading f-22 link color-main mb-20">Ventures</a></div>
 
       <div><a href="#" class="f-12 link color-main op-7 text-uppercase sp-20 mb-20">Contact Us</a></div>
 
@@ -60,7 +60,7 @@
                     <a href="mission.html" class="link color-white">Mission</a>
                   </div>
                   <div>
-                    <a href="ventures.html" class="link color-white">Ventures</a>
+                    <a href="#" class="link color-white">Ventures</a>
                   </div>
                 </div>
               </div>
@@ -89,7 +89,7 @@
                 </div>
               </div>
               <span>
-                <a href="ventures.html" class="btn lg action-1">See Our Ventures</a>
+                <a href="#" class="btn lg action-1">See Our Ventures</a>
               </span>
             </div>
           </div>
