--- a/mission.html
+++ b/mission.html
@@ -35,7 +35,7 @@
 								<a href="#" class="link color-white">Mission</a>
 							</div>
 							<div>
-								<a href="ventures.html" class="link color-white">Ventures</a>
+								<a href="#" class="link color-white">Ventures</a>
 							</div>
 						</div>
 					</div>
