overhaul on mission page

--- a/mission.html
+++ b/mission.html
@@ -50,30 +50,18 @@
 		</div>
 	</nav>
 
-	<!-- Mission Statement -->
-	<section class="pt-100 pb-100 bg-dark content_12">
-		<div class="container px-xl-0 color-white">
-			<div class="row">
-				<div class="col-lg-1">
-				</div>
-				<div class="col-xl-8 col-lg-10">
-					<div class="mb-20 f-22 text-adaptive title">Mission
-					</div>
-					<div class="op-7 text-adaptive">
-						<div>
-							We're on a mission to design products that will help security researchers, software developers and companies to create resilient solutions that thwart forward-thinking security threats.
-							<br><br>
-							Our company was born in San Mateo, CA; we serve local and international clients with services that cater to their individualized needs. We focus on getting everyday users and busy corporate managers to be compliant, secure, up to date, and worry free.
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<!-- Our Team -->
 	<section class="pt-105 pb-120 bg-dark color-white text-center text-sm-left team_5">
 		<div class="container px-xl-0">
+			<div class="row">
+				<div class="col-xl-8 col-lg-10">
+					<h2 class="small">Mission</h2>
+					<div class="mt-25 mb-70 f-22 text-adaptive">
+						We're on a mission to design products that will help security researchers, software developers and companies in creating resilient solutions that thwart forward-thinking security threats.
+						<br><br>
+					Our company was born in San Mateo, CA and we serve local and international clients. Our products and services cater to the individualized needs of our people. We focus on getting everyday users and busy corporate managers to be compliant, secure, up to date, and worry-free.
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-xl-8 col-lg-10">
 					<h2 class="small">Startup Crew</h2>
@@ -82,14 +70,14 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="mb-75 col-lg-3 col-md-4 col-sm-6">
-					<a class="link color-white">
-						<img src="i/team_5_img_1.jpg" srcset="i/team_5_img_1@2x.jpg 2x" alt="" class="radius_full" />
+				</div>
+				<div class="mb-75 mb-md-0 col-lg-3 col-md-4 col-sm-6">
+					<a href="#" class="link color-white">
+						<img src="i/team_5_img_4.jpg" srcset="i/team_5_img_4@2x.jpg 2x" alt="" class="radius_full" />
 						<div class="mt-15 mb-10 f-22 title">Ryan</div>
 						<div>CEO</div>
-						<a href="#" class="link color-white mr-25" target="_blank">
-							<i class="fab fa-dribbble"></i>
-						</a>
+					</a>
+					<div class="mt-15 block_socials">
 						<a href="#" class="link color-white mr-25" target="_blank">
 							<i class="fab fa-instagram"></i>
 						</a>
@@ -127,30 +115,6 @@
 				</div>
 				<div class="col-lg-3 d-none d-lg-block">
 				</div>
-				<div class="mb-75 mb-md-0 col-lg-3 col-md-4 col-sm-6">
-					<a href="#" class="link color-white">
-						<img src="i/team_5_img_4.jpg" srcset="i/team_5_img_4@2x.jpg 2x" alt="" class="radius_full" />
-						<div class="mt-15 mb-10 f-22 title">Taylor</div>
-						<div>Product Manager</div>
-					</a>
-					<div class="mt-15 block_socials">
-						<a href="#" class="link color-white mr-25" target="_blank">
-							<i class="fab fa-instagram"></i>
-						</a>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a href="#" class="link color-white">
-						<img src="i/team_5_img_5.jpg" srcset="i/team_5_img_5@2x.jpg 2x" alt="" class="radius_full" />
-						<div class="mt-15 mb-10 f-22 title">Steven</div>
-						<div>Legal</div>
-					</a>
-					<div class="mt-15 block_socials">
-						<a href="#" class="link color-white mr-25" target="_blank">
-							<i class="fab fa-instagram"></i>
-						</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -175,9 +139,7 @@
 						<a href="https://digitalsnow.atlassian.net" class="link color-white ml-10">
 							<i class="fab fa-jira"></i>
 						</a>
-						<a href="#" class="link color-white ml-10">
-							<i class="fab fa-twitter"></i>
-						</a>
+
 						</a>
 					</div>
 				</div>
