--- a/mission.html
+++ b/mission.html
@@ -41,11 +41,6 @@
 					</div>
 					<a href="https://digitalsnow.app" class="link logo color-white">Digital Snow</a>
 				</div>
-				<div class="col-sm-1 col-2 text-right">
-          <a href="#" class="link color-white">
-            <i class="fas fa-search"></i>
-          </a>
-        </div>
 			</div>
 		</div>
 	</nav>
@@ -62,6 +57,7 @@
 					Our company was born in San Mateo, CA and we serve local and international clients. Our products and services cater to the individualized needs of our people. We focus on getting everyday users and busy corporate managers to be compliant, secure, up to date, and worry-free.
 				</div>
 			</div>
+		</div>
 			<div class="row">
 				<div class="col-xl-8 col-lg-10">
 					<h2 class="small">Startup Crew</h2>
@@ -70,16 +66,21 @@
 				</div>
 			</div>
 			<div class="row">
-				</div>
 				<div class="mb-75 mb-md-0 col-lg-3 col-md-4 col-sm-6">
 					<a href="#" class="link color-white">
 						<img src="i/team_5_img_4.jpg" srcset="i/team_5_img_4@2x.jpg 2x" alt="" class="radius_full" />
 						<div class="mt-15 mb-10 f-22 title">Ryan</div>
-						<div>CEO</div>
+						<div>Founder</div>
 					</a>
 					<div class="mt-15 block_socials">
 						<a href="#" class="link color-white mr-25" target="_blank">
 							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="#" class="link color-white mr-25" target="_blank">
+							<i class="fab fa-discord"></i>
+						</a>
+						<a href="#" class="link color-white mr-25" target="_blank">
+							<i class="fab fa-ello"></i>
 						</a>
 					</div>
 				</div>
@@ -92,6 +93,12 @@
 					<div class="mt-15 block_socials">
 						<a href="#" class="link color-white mr-25" target="_blank">
 							<i class="fab fa-dribbble"></i>
+						</a>
+						<a href="#" class="link color-white mr-25" target="_blank">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="#" class="link color-white mr-25" target="_blank">
+							<i class="fab fa-discord"></i>
 						</a>
 					</div>
 				</div>
