mission venture link change

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
               </div>
               <span>
-                <a href="#" class="btn lg action-1">See Our Ventures</a>
+                <a href="mission.html" class="btn lg action-1">See Our Ventures</a>
               </span>
             </div>
           </div>
