--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="https://www.instagram.com/digital.snow/" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-instagram"></i></a>
         <a href="https://github.com/digitalsnowcorp" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-git"></i></a>
         <a href="https://digitalsnow.atlassian.net" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-jira"></i>
-          <a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-twitter"></i></a>
+          <a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-hacker-news"></i></a>
       </div>
       </div>
       </div>
