--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <a href="https://digitalsnow.app" class="link color-white mr-10">Home</a>
           <a href="mission.html" class="link color-white mx-10">Mission</a>
           <a href="#" class="link color-white mx-10">Ventures</a>
-          <a href="#" class="link color-white mx-10">Contact Us</a>
+          <a href="mailto:info@digitalsnow.app" class="link color-white mx-10">Contact Us</a>
         </div>
         <div class="col-lg-5 text-lg-right">
           <div class="text-adaptive">© 2020 Digital Snow Corp. All rights reserved.
