--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="mission.html" class="link color-white">Mission</a>
                   </div>
                   <div>
-                    <a href="#" class="link color-white">Ventures</a>
+                    <a href="mailto:info@digitalsnow.app" class="link color-white mx-10">Contact Us</a>
                   </div>
                 </div>
               </div>
