--- a/mission.html
+++ b/mission.html
@@ -35,7 +35,7 @@
 								<a href="#" class="link color-white">Mission</a>
 							</div>
 							<div>
-								<a href="mailto:info@digitalsnow.app" class="link color-white mx-10">Contact Us</a>
+								<a href="mailto:info@digitalsnow.app" class="link color-white">Contact</a>
 							</div>
 						</div>
 					</div>
